# webserv-v0.1

./: .gitignore  CMakeLists.txt  README.md  simple_client.c  webserv.conf
cgi-templates/: cgi1.py  cgi2.php
echo-serv-v1/: client.cpp  server.cpp
echo-serv-v2/: server.cpp
echo-serv-v3/: server.cpp
echo-servs/: README.md
echo-servs/echo-serv-v1/: server.cpp
echo-servs/echo-serv-v2/: server.cpp
echo-servs/echo-serv-v3/: server.cpp
src/: client.cpp  main.cpp  webserv.cpp
src/async-core/: ft-async-core.hpp
src/async-core/coro/: stackless.hpp
src/async-core/executors/: IExecutor.hpp  StaticThreadPool.hpp  same_thread.hpp
src/async-core/future/: future.hpp
src/async-core/future/detail/: _promise_container.hpp  _shared_state.hpp
src/async-core/io/: Context.hpp  EntityConcepts.hpp  EntityCreator.hpp  FutPipe.hpp  FutRead.hpp  FutSocket.cpp  FutSocket.hpp  FutTCPAcceptor.cpp  FutTCPAcceptor.hpp  FutWrite.hpp
src/async-core/io/error/: Result.cpp  Result.hpp
src/async-core/io/out-of-context/: EventListener.hpp  EventLoop.cpp  EventLoop.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Pipe.cpp  Pipe.hpp  Socket.cpp  Socket.hpp  TCPAcceptor.cpp  TCPAcceptor.hpp  ioConcepts.hpp
src/async-core/io/out-of-context/low-lewel/: epoll_based_l.hpp  event.hpp  kqueue_based_l.hpp  non_block.hpp  poll_based_l.hpp  select_based_l.hpp
src/async-core/mpmc-queue/: mpmc_queue.hpp
src/async-core/mpmc-queue/detail/: forward_list.hpp
src/async-core/util/: Result.hpp  move_only_func.hpp  stream_wrappers.cpp  stream_wrappers.hpp  thread_local_buf.cpp  util.hpp
src/config-parser/: Config.cpp  Config.hpp  example.conf
src/config-parser/serv-conf/: ServConf.cpp  ServConf.hpp
src/http/: HttpConnection.cpp  HttpConnection.hpp  HttpRequest.hpp  HttpRequestParser.cpp  HttpRequestParser.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp  ft-http.hpp
src/http/cgi/: Cgi.cpp  Cgi.hpp
src/http/error/: Result.hpp
src/http/parsers/: HttpRequestParser.cpp  HttpRequestParser.hpp  HttpResponseParser.cpp  HttpResponseParser.hpp
src/http/writers/: HttpRequestSerializer.cpp  HttpRequestSerializer.hpp  HttpRequestWriter.cpp  HttpRequestWriter.hpp  HttpResponseSerializer.cpp  HttpResponseSerializer.hpp  HttpResponseWriter.cpp  HttpResponseWriter.hpp
static/: text.html  text.txt
tests/: main_test.cpp  simple_test_lib.hpp
tests/unit/Result/: result.cpp
tests/unit/config/: correct.conf  error1.conf  error2.conf  error3.conf  error4.conf  error5.conf  tests.cpp
tests/unit/executors/: executors.cpp
tests/unit/future/: coro.cpp  future_test.cpp
tests/unit/io_event/: io_event.cpp
tests/unit/mpmc-queue/: forward_list.cpp  queue_test.cpp
